# ChangeLog for dev-perl/perlmagick
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/perlmagick/ChangeLog,v 1.64 2005/04/01 05:06:15 agriffis Exp $

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org>
  perlmagick-6.2.0.4-r1.ebuild:
  stable on ia64

  27 Mar 2005; Guy Martin <gmsoft@gentoo.org> perlmagick-6.2.0.4-r1.ebuild:
  Stable on hppa.

  27 Mar 2005; Bryan Østergaard <kloeri@gentoo.org>
  perlmagick-6.2.0.4-r1.ebuild:
  Stable on alpha.

  15 Mar 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  perlmagick-6.2.0.6.ebuild:
  Bumped to match Imagemagick

  13 Mar 2005; Hardave Riar <hardave@gentoo.org> perlmagick-6.2.0.4.ebuild:
  Stable on mips, bug #83542.

*perlmagick-6.2.0.4-r1 (13 Mar 2005)

  13 Mar 2005; Michael Cummings <mcummings@gentoo.org>
  +perlmagick-6.2.0.4-r1.ebuild:
  Changes in this ebuild over time have made it impossible to emerge on a
  system without X, as highlighted in bug 70570. The problem is that if you
  don't run the base configure for imagemagick, the Makefile for the
  perlmagick portion is left at the default. This new ebuild adds back in the
  conf process, so that it is a duplicate of the conf used by imagemagick so
  that perlmagick is built in a completely compatible fashion. Thanks to Neil
  Katin <gentoo@askneil.com> for working through this and providing users with
  a working ebuild in the interim. As this functionality change is a mirror of
  what is in the imagemagick ebuild, a dependancy for being able to install
  perlmagick, I am retaining the KEYWORDS as is, since for this to fail
  imagemagick would need to fail as well.

  08 Mar 2005; Olivier Crête <tester@gentoo.org> perlmagick-6.2.0.4.ebuild:
  Stable on x86 per security bug #83542

  03 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
  perlmagick-6.2.0.4.ebuild:
  Stable on ppc.

  03 Mar 2005; Markus Rothe <corsair@gentoo.org> perlmagick-6.2.0.4.ebuild:
  Stable on ppc64; bug #83542
