@@ -1,10 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 MD5 0015e363dbbf96d1777d9780941b9791 perlmagick-6.1.3.2.ebuild 999
 MD5 4f058b34484703496dd9dfdbabcb486e perlmagick-6.2.0.4-r1.ebuild 2229
 MD5 a4152927ae5f877507ec65b9ccd84159 perlmagick-6.1.3.4.ebuild 999
+MD5 8dac91e4a1fc7f5dbbaf4114f9e0f3b3 perlmagick-6.2.1.5.ebuild 874
 MD5 9ac57feabcaf2f74f6fb436990a6bddf perlmagick-6.1.6.0.ebuild 1006
 MD5 501130e21a375b8b1e3eaee3b5597dd7 perlmagick-6.2.0.4.ebuild 1000
 MD5 00a4287677fca12a311eab914e7d4435 perlmagick-6.2.0.6.ebuild 2235
-MD5 d0c8521a851b1e5fc119bea80ae6998a ChangeLog 9041
+MD5 4f0d5b7fdc486b5d567ea9049265e6cd ChangeLog 9287
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 MD5 bbca613cd3c1a3b9a720957a8fcad63f perlmagick-6.1.8.8.ebuild 1000
 MD5 b5fd28bb0167a5ab5f5422e7335a5c11 files/digest-perlmagick-6.2.0.4-r1 72
@@ -14,4 +18,12 @@ MD5 4dbe04f2c27a20911e1080d591674997 files/digest-perlmagick-6.1.6.0 73
 MD5 42fd34630ded62400ed31be1426e3b32 files/digest-perlmagick-6.1.8.8 73
 MD5 b5fd28bb0167a5ab5f5422e7335a5c11 files/digest-perlmagick-6.2.0.4 72
 MD5 3463dd071a5d891ab69d1797c256df76 files/digest-perlmagick-6.2.0.6 72
+MD5 ab68adfb9efb0f004017b018e622b96a files/digest-perlmagick-6.2.1.5 73
 MD5 edbc2be86318f2676c55ce64e47ea2f6 files/perlpatch.diff 1598
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.1 (GNU/Linux)
+
+iD8DBQFCZmt/Z/iYVBmujdURAo+0AKDQNdp/LNU/6hFM/x2ApoRayTbxSACZAUqj
+UgCPIBQa1HwIOLMy5spAONE=
+=TuFb
+-----END PGP SIGNATURE-----
