@@ -1,0 +1,1 @@
+MD5 2dc84b180976fc9440e60b9b2e4f3a19 ImageMagick-6.2.1-5.tar.bz2 4713761
